# edimax-br-6528n

./: BUILD.sh  COMPILING-SCRIPT.sh  Edimax_RTL8196C_BR6258GN_GPL_20121022_md5sum  Edimax_RTL8196C_BR6258GN_GPL_20121022_readme  PREPARE.sh  README.txt  make.def  porting_sdk.txt  target.def
AP/: DoApp.sh
AP/RTL8196C_1200/: DoIt.sh
AP/bpalogin-2.0.2/: DoIt.sh  Makefile  bpalogin  bpalogin.c  bpalogin.h  jobs  protocol.c  unixmain.c
AP/bridge-utils/: ChangeLog  DoIt.sh  jobs
AP/busybox-1.11.1/: .config_Buffalo  .config_dhchprelay  .config_edimax30  .config_normal  DoIt.sh  Makefile  go
AP/cgic205/: DoIt.sh  Makefile  go  index.c
AP/clockspeed-0.62/: DoIt.sh  Makefile  auto-str  auto-str-gcc  clockadd  clockadd.0  clockspeed  clockspeed.0  clockspeed.c  clockview  clockview.0  clockview.c  instcheck  jobs  sntpclock.0  sntpclock.c  taia_add.c  taia_less.c  taia_now.c  taia_sub.c  taiclock  taiclock.0  taiclockd  taiclockd.0
AP/dnrd-2.10/: Construct  DoIt.sh  HISTORY  INSTALL  README  jobs  ng.txt
AP/epi_ttcp/: DoIt.sh  Makefile  m
AP/etc.rootfs/: fstab  inittab  passwd  profile  resolv1.conf  resolv2.conf  (+1 more)
AP/ppp-2.4.2/pppd/plugins/radius/radiusclient/patches/: Makefile.am  Makefile.in  README
define/: C_DEFINE  C_DEFINE.h  FUNCTION_COMPILER  FUNCTION_SCRIPT  PATH_RTL8196C_1200  SCRIPT_DEFINED  TEMP_FILE  usb_support.conf
image/: DoImage.sh  Upgrade.sh  appimg  autoCks.c  boot-SPI-16M-16BIT-SDRAM-6258GN  linux  linux-org  mgbin  mkimage  swapHL  swapHL.c
linux-2.4.18_1200_96C/: .config.Normal  CREDITS  DoLinux.sh  MAINTAINERS  Makefile  Rules.make  mk
(+3609 files in other folders)
